fix: update font family to 'Inter' for improved readability

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 body {
@@ -47,6 +47,8 @@ nav p {
   flex: 1 1 auto;
   align-items: center;
   text-align: center;
+  font-weight: 100;
+  line-height: 1.5;
 }
 
 .info {
